[gd_scene format=3 uid="uid://c4c3rmxqxkdrb"]

[ext_resource type="PackedScene" uid="uid://d4lgvfpfe2ndu" path="res://ui/cta/home_cta.tscn" id="1_cta"]
[ext_resource type="Script" uid="uid://kxbdgy8se65u" path="res://game/home/home_screen.gd" id="2_script"]

[sub_resource type="LabelSettings" id="LabelSettings_ub6al"]
font_size = 200

[node name="HomeScreen" type="Node2D" unique_id=1289573964]
script = ExtResource("2_script")

[node name="Label" type="Label" parent="." unique_id=2139209302]
offset_right = 1920.0
offset_bottom = 500.0
text = "Game Name"
label_settings = SubResource("LabelSettings_ub6al")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1708566051]
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1000.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer" unique_id=558963837]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="PlayButton" parent="CenterContainer/VBox" unique_id=159418613 instance=ExtResource("1_cta")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" parent="CenterContainer/VBox" unique_id=1303325854 instance=ExtResource("1_cta")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" parent="CenterContainer/VBox" unique_id=1567768146 instance=ExtResource("1_cta")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
